--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sundown Studio</title>
+    <title>www.anshpreet.com</title>
     <link rel="shortcut icon" href="./icon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -13,9 +13,9 @@
 
 <body>
     <div id="loader">
-        <h1>ENVIRONMENTS</h1>
-        <h1>EXPERIENCES</h1>
-        <h1>CONTENT</h1>
+        <h1>WELCOME TO</h1>
+        <h1>CODESPACE OF</h1>
+        <h1>www.anshpreet.com</h1>
     </div>
     <div id="fixed-image">
 
@@ -24,19 +24,18 @@
 
         <div id="page1">
             <nav>
-                <img src="https://uploads-ssl.webflow.com/64d3dd9edfb41666c35b15b7/64d3dd9edfb41666c35b15c2_Sundown%20logo.svg"
+                <img src="https://pixeldrain.com/api/file/hNNgFZjo"
                     alt="">
                 <div id="nav-part2">
-                    <h4><a href="#">Work</a></h4>
+                    <h4><a href="www.anshpreet.com">Home</a></h4>
                     <h4><a href="#">Studio</a></h4>
-                    <h4><a href="#">Contact</a></h4>
+                    <h4><a href="https://etus.link/linktree-contact-me">Contact</a></h4>
                 </div>
                 <h3>Menu</h3>
             </nav>
             <div id="center">
                 <div id="left">
-                    <h3>Sundown is a multi-disciplinary studio focused on creating unique, end-to-end experiences and
-                        environments.</h3>
+                    <h3>www.Anshpreet.com is a digital sanctuary for coding enthusiasts, dedicated to crafting immersive and comprehensive coding experiences and resources.</h3>
                 </div>
                 <div id="right">
                     <h1>SPACES <br>
@@ -50,7 +49,7 @@
                 <div id="hero-2"></div>
                 <div id="hero-3"></div>
             </div>
-            <video autoplay loop muted src="./video.mp4"></video>
+            <video autoplay loop muted src="https://pixeldrain.com/api/file/mLJbeSqY"></video>
         </div>
         <div id="page2">
             <div id="moving-text">
@@ -80,10 +79,9 @@
                 </div>
             </div>
             <div id="page2-bottom">
-                <h1>We are a group of design- driven, goal-focused creators,  producers, and designers who
-                    believe that the details  make all the difference.</h1>
+                <h1>We are a community of code enthusiasts, problem solvers, and passionate developers at Anshpreet, dedicated to the intricacies of coding because we believe that attention to detail is what sets exceptional projects apart</h1>
                 <div id="bottom-part2">
-                    <img src="https://uploads-ssl.webflow.com/64d3dd9edfb41666c35b15b7/64d3dd9edfb41666c35b15d1_Holding_thumb-p-500.jpg"
+                    <img src="hhttps://images.unsplash.com/photo-1555949963-ff9fe0c870eb?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
                         alt="">
                     <p>We love to create, we love to solve, we love to collaborate, and we love to turn amazing ideas
                         into reality. We’re here to partner with you through every step of the process and know that
@@ -97,39 +95,39 @@
         <div id="page3">
             <div id="elem-container">
                 <div id="elem1" class="elem"
-                    data-image="https://images.unsplash.com/photo-1701001308648-7b731a52b8d7?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxNHx8fGVufDB8fHx8fA%3D%3D">
+                    data-image="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?q=80&w=2069&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
                     <div class="overlay"></div>
                     <h2>Makers Studio HOI</h2>
                 </div>
                 <div class="elem"
-                    data-image="https://images.unsplash.com/photo-1700975928909-da4a46227a47?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw0fHx8ZW58MHx8fHx8">
+                    data-image="https://images.unsplash.com/photo-1498050108023-c5249f4df085?q=80&w=2072&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
                     <div class="overlay"></div>
-                    <h2>50th Anniversary</h2>
+                    <h2>RECENTLY LAUNCHED</h2>
                 </div>
                 <div class="elem"
-                    data-image="https://images.unsplash.com/photo-1701077137611-9be394bf62f0?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyMHx8fGVufDB8fHx8fA%3D%3D">
+                    data-image="https://images.unsplash.com/photo-1555066931-4365d14bab8c?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
                     <div class="overlay"></div>
-                    <h2>NYFW Popup</h2>
+                    <h2>INNOVATIVE IDEAS</h2>
                 </div>
                 <div class="elem"
-                    data-image="https://images.unsplash.com/photo-1701014159309-4a8b84faadfe?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxOXx8fGVufDB8fHx8fA%3D%3D">
+                    data-image="https://images.unsplash.com/photo-1677442136019-21780ecad995?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
                     <div class="overlay"></div>
-                    <h2>Air Force 1 2021</h2>
+                    <h2>SELF INDEPENDENT DEVELOPER</h2>
                 </div>
                 <div class="elem"
-                    data-image="https://images.unsplash.com/photo-1700924546093-f914fd5b8814?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyOHx8fGVufDB8fHx8fA%3D%3D">
+                    data-image="https://images.unsplash.com/photo-1503252947848-7338d3f92f31?q=80&w=1931&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
                     <div class="overlay"></div>
-                    <h2>SOHO NYC</h2>
+                    <h2>FROM SCRATCH</h2>
                 </div>
                 <div class="elem"
-                    data-image="https://images.unsplash.com/photo-1700601437860-e66da79cf6d2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw1OXx8fGVufDB8fHx8fA%3D%3D">
+                    data-image="https://images.unsplash.com/photo-1504639725590-34d0984388bd?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
                     <div class="overlay"></div>
-                    <h2>SOHO 2023</h2>
+                    <h2>STARTING 2024</h2>
                 </div>
                 <div class="elem"
-                    data-image="https://images.unsplash.com/photo-1700769025506-6c3dcb9ec9b7?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw2OXx8fGVufDB8fHx8fA%3D%3D">
+                    data-image="https://images.unsplash.com/photo-1516259762381-22954d7d3ad2?q=80&w=2089&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
                     <div class="overlay"></div>
-                    <h2>Play New Kidvision</h2>
+                    <h2>DEBUGG YOUR PROBLEMS</h2>
                 </div>
             </div>
         </div>
